Height bug on small screens

--- a/static/css/stylish-portfolio.css
+++ b/static/css/stylish-portfolio.css
@@ -168,7 +168,6 @@ hr.small {
 
 .about {
     padding: 100px 0;
-    height: 44%;
 }
 
 /* Services */
